--- a/views/signIn.ejs
+++ b/views/signIn.ejs
@@ -5,9 +5,13 @@
     <div class="base-width sign-in-page">
         <%- include('./partials/header.ejs', {link: ''}) %>
         <div class="sign-in-container">
-            <form action="/api/signin" method="POST" class="sign-in-form">
+            <form 
+                action="/api/signin" 
+                method="POST"
+                class="sign-in-form"
+                >
                 <h2 class="form-header">Вход</h2>
-                <input type="email" placeholder="Введите e-mail" name="email">
+                <input type="text" placeholder="Введите e-mail" name="email">
                 <input type="password" placeholder="Введите пароль" name="password">
                 <button type="submit">Войти</button>
             </form>
