--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,13 +16,16 @@
                 <div class="side-bar">
                     <%- include('./partials/sectionsHeader.ejs', {title: 'Категории', description: ''}) %>
                     <ul class="link-list">
-                        <% categories.forEach(category => { %>
-                            <li>
-                                <a href="/<%= category.key %>">
-                                    <%= category.categoryName %>
-                                </a>
-                            </li>
-                        <% }) %>
+                        <li><a href="">Прогнозы в IT</a></li>
+                        <li><a href="">Веб-разработка</a></li>
+                        <li><a href="">Мобильная разработка</a></li>
+                        <li><a href="">Фриланс</a></li>
+                        <li><a href="">Алгоритмы</a></li>
+                        <li><a href="">Тестирование IT систем</a></li>
+                        <li><a href="">Разработка игр</a></li>
+                        <li><a href="">Дизайн и юзабилити</a></li>
+                        <li><a href="">Искуственный интелект</a></li>
+                        <li><a href="">Машинное обучение</a></li>
                     </ul>
                 </div>
             </div>
