закончил регистрацию и авторизацию

--- a/public/style/all.css
+++ b/public/style/all.css
@@ -4,6 +4,7 @@
 /* Components */
 @import url('./components/header.css');
 @import url('./components/postItem.css');
+@import url('./components/userLogo.css');
 
 @import url('./pages/siginIn.css');
 @import url('./pages/profile.css');
