--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,20 +3,7 @@
     <%- include('./partials/head.ejs', {title: 'User Profile'}) %>
 <body>
     <div class="base-width profile-page">
-        <header class="base-right-left-padding">
-            <div class="header-logo">
-                Decode Blog
-            </div>
-            <div class="haeder-search">
-                <form action="">
-                    <input type="text" placeholder="Blog search">
-                    <%- include('./partials/button.ejs', {icon: '/image/icons/haeder-saerch-icon.png', title: 'Search', link: ''}) %>
-                </form>
-            </div>
-                <div class="header-user-profile-photo">
-                    <%- include('./partials/userLogo.ejs', {image: '/image/user-photo/user-logo.png'}) %>
-                </div>
-        </header>
+        <%- include('./partials/header.ejs', {link: ''}) %>
         <div class="profile-container main-container">
             <div class="post-container">
                 <div class="profile-pge-header sections-header">
@@ -35,10 +22,14 @@
             <div class="side-bar">
                 <div class="user-info">
                     <%- include('./partials/userLogo.ejs', {image: '/image/user-photo/user-logo.png'}) %>
-                    <h3 class="user-name">Елнур Сейтжанов</h3>
+                    <h3 class="user-name"><%= user.full_name %></h3>
                     <p class="about-user">В основном пишу про веб - разработку, на React & Redux</p>
                     <p class="post-item-count">285 постов за все время</p>
-                    <button class="edit-btn">Редактировать</button>
+                    <% if(loginUser._id == user._id) { %>
+                        <a href="/edit" class="edit-btn btn">Редактировать</a>
+                        <a href="/api/signout" class="logout-btn btn">Выход</a>
+                    <% } %>
+
                 </div>
             </div>
         </div>
