--- a/views/partials/userLogo.ejs
+++ b/views/partials/userLogo.ejs
@@ -1,3 +1,3 @@
-<div class="user-profile-photo">
+<a href="/profile/<%= user._id %>" class="user-profile-photo">
     <img src="<%= image %>" alt="">
-</div>
+</a>
