add admin profile

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
                 <div class="side-bar">
                     <%- include('./partials/sectionsHeader.ejs', {title: 'Категории', description: ''}) %>
                     <ul class="link-list">
+                        <%= user.email %>
                         <li><a href="">Прогнозы в IT</a></li>
                         <li><a href="">Веб-разработка</a></li>
                         <li><a href="">Мобильная разработка</a></li>
