--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,9 +9,11 @@
         </form>
     </div>
     <div class="header-user-actions">
-        <% if(user._id) { %>
+        <% if(user._id && user.isAdmin) { %>
             <div></div>
-            <%- include('./userLogo', {image: '/image/user-photo/user-logo.png'})  %>
+            <%- include('./userLogo', {image: '/image/user-photo/user-logo.png', link: `/admin/${user._id}`})  %>
+        <% } else if (user._id && !user.isAdmin) { %>
+            <%- include('./userLogo', {image: '/image/user-photo/user-logo.png', link: `/profile/${user._id}`})  %>
         <% } else { %>
             <%- include('./button', {icon: '', title: 'Sign up', link: '/signUp'}) %>
             <%- include('./button', {icon: '', title: 'Sign in', link: '/signIn'}) %>
