--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -21,7 +21,7 @@
             </div>
             <div class="side-bar">
                 <div class="user-info">
-                    <%- include('./partials/userLogo.ejs', {image: '/image/user-photo/user-logo.png'}) %>
+                    <%- include('./partials/userLogo.ejs', {image: '/image/user-photo/user-logo.png', link: ""}) %>
                     <h3 class="user-name"><%= user.full_name %></h3>
                     <p class="about-user">В основном пишу про веб - разработку, на React & Redux</p>
                     <p class="post-item-count">285 постов за все время</p>
