добавил кнопки удаления и редактирование постов, эти кнопри видят только авторы постов, на общей домашней странице вывел все посты, на странице профиля только посты пвтора

--- a/public/style/all.css
+++ b/public/style/all.css
@@ -5,6 +5,7 @@
 @import url('./components/header.css');
 @import url('./components/postItem.css');
 @import url('./components/userLogo.css');
+@import url('./components/fieldset.css');
 
 @import url('./pages/siginIn.css');
 @import url('./pages/profile.css');
