--- a/views/newPost.ejs
+++ b/views/newPost.ejs
@@ -3,7 +3,8 @@
     <%- include('./partials/head.ejs', {title: 'New Post'}) %>
 <body>
     <div class="base-width profile-page">
-        <header class="base-right-left-padding">
+        <%- include('./partials/header.ejs', {link: ''}) %>
+        <!-- <header class="base-right-left-padding">
             <a href="/" class="header-logo">
                 Decode Blog
             </a>
@@ -14,32 +15,50 @@
                 </form>
             </div>
             <div class="header-user-profile-photo">
-                <%- include('./partials/userLogo.ejs', {image: '/image/user-photo/user-logo.png'}) %>
+                <%- include('./partials/userLogo.ejs', {image: '/image/user-photo/user-logo.png', link: ''}) %>
             </div>
-        </header>
+        </header> -->
         <div class="new-post-page base-right-left-padding">
             <div class="new-post-container  main-container">
                 <h1 class="sections-header">
                     Новый блог
                 </h1>
-                <form class="new-post-form" action="">
-                    <input type="text" placeholder="Введите заголовок блога">
-                    <input list="options" id="choices" name="choices" placeholder="Выберите категорию">
-                    <datalist id="options">
-                      <option value="Опция 1">
-                      <option value="Опция 2">
-                      <option value="Опция 3">
-                    </datalist>
+                <form 
+                    class="new-post-form" 
+                    action="/api/new"
+                    method="POST"
+                    enctype="multipart/form-data"
+                >
+                    <fieldset class="fieldset_categories">
+                        <label for="">Введите заголовок блога</label>
+                        <select name="postCategory" id="">
+                            <% categories.forEach(category => { %>
+                                <option value="<%= category._id %>">
+                                    <%= category.name %>
+                                </option>
+                            <% }) %>
+                        </select>
+                    </fieldset>
+                    <fieldset class="fieldset_title">
+                        <label for="">Введите название блога</label>
+                        <input type="text" name="postTitle">
+                    </fieldset>
+                    <fieldset class="fieldset_image">
+                        <label for="">Выберите картинку</label>
+                        <input type="file" name="image">
+                    </fieldset>
+
+                    <div class="">
+                        <textarea 
+                            class="custom-input" 
+                            placeholder="Введите описание блога" 
+                            name="postDescription">
+                        </textarea>
+                    </div>
+                    <button type="submit" class="create-new-post">
+                        Создать пост
+                    </button>
                 </form>
-                <button class="add-images-btn">
-                    Выберите картинку
-                </button>
-                <div class="">
-                    <textarea class="custom-input" placeholder="Введите описание блога"></textarea>
-                </div>
-                <button class="create-new-post">
-                    Создать пост
-                </button>
             </div>
         </div>
     </div>
