--- a/views/partials/postItem.ejs
+++ b/views/partials/postItem.ejs
@@ -1,45 +1,57 @@
-<div class="post-item">
-    <div class="post-img">
-        <img src="<%- image %>" alt="post img">
+
+    <div class="post-item">
+        <div class="post-img">
+            <img src="<%- image %>" alt="post img">
+        </div>
+        <div class="post-description">
+            <div class="post-title">
+                <h1>
+                    <%= postTitle %>
+                </h1>
+                <div class="post-btns">
+                    <% if(String(isAuthor) === String(user._id)) { %>
+                        <a href="" class="btn delete">Delete</a>
+                        <a href="/edit" class="btn edit">Edit</a>
+                    <% } else { %>
+                        <div></div>
+                    <% }%>
+
+                </div>
+            </div>
+            <p><%= postDescription %> </p>
+            <p><%= isAuthor %> </p>
+
+        </div>
+        <div class="post-user-actions">
+            <div>
+                <img src="/image/icons/date.svg" alt="date">
+                <div class="curren-date">
+                    02.11.2024
+                </div>
+            </div>
+            <div>
+                <img src="/image/icons/visibility.svg" alt="">
+                <div>
+                    21
+                </div>
+            </div>
+            <div>
+                <img src="/image/icons/message.svg" alt="">
+                <div>
+                    4
+                </div>
+            </div>
+            <div>
+                <img src="/image/icons/forums.svg" alt="">
+                <div>
+                    <%= postCategory %>
+                </div>
+            </div>
+            <div>
+                <img src="/image/icons/person.svg" alt="">
+                <div>
+                    <%= author %>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="post-description">
-        <h1 class="post-title">
-            Обзор Report Manager от Webix
-        </h1>
-        <p>
-            Осень 2020 года стала плодотворным временем для специалистов Webix. Команда Webix выпустила восьмую версию библиотеки пользовательского интерфейса Webix с двумя новыми комплексными виджетами. Первый - зто Scheduler, о котором мы подробно говорили ранее. Второй виджет - это Gantt chart в JavaScript. Подробную информацию об этом виджете Вы можете найти в статье. Ноябрь продолжает тенденцию, и мы спешим поделиться с Вами новым комплексным виджетом Report Manager. Давайте рассмотрим ег
-        </p>
-    </div>
-    <div class="post-user-actions">
-        <div>
-            <img src="/image/icons/date.svg" alt="date">
-            <div class="curren-date">
-                02.11.2024
-            </div>
-        </div>
-        <div>
-            <img src="/image/icons/visibility.svg" alt="">
-            <div>
-                21
-            </div>
-        </div>
-        <div>
-            <img src="/image/icons/message.svg" alt="">
-            <div>
-                4
-            </div>
-        </div>
-        <div>
-            <img src="/image/icons/forums.svg" alt="">
-            <div>
-                Web - development
-            </div>
-        </div>
-        <div>
-            <img src="/image/icons/person.svg" alt="">
-            <div>
-                otDaur
-            </div>
-        </div>
-    </div>
-</div>
