--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
                                 image: post.image, 
                                 author: post.author.full_name,
                                 isAuthor: post.author._id,
-                                user: user,
+                                psotId: post.id
                             }) %>
                         <% }) %>
                     </div>
