--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -27,6 +27,7 @@
                                 image: post.image, 
                                 author: post.author.full_name,
                                 isAuthor: post.author.id,
+                                psotId: post.id
                             }) %>
                         <% } %>
                     <% }) %>
