--- a/views/partials/postItem.ejs
+++ b/views/partials/postItem.ejs
@@ -11,18 +11,16 @@
                 <div class="post-btns">
                     <% if(String(isAuthor) === String(user._id)) { %>
                         <a href="" class="btn delete">Delete</a>
-                        <a href="/edit" class="btn edit">Edit</a>
+                        <a href="/edit/<%= psotId %>" class="btn edit">Edit</a>
                     <% } else { %>
                         <div></div>
                     <% }%>
-
                 </div>
             </div>
             <p><%= postDescription %> </p>
-            <p><%= isAuthor %> </p>
-
+           
         </div>
-        <div class="post-user-actions">
+        <div class="post-user-actions"> n
             <div>
                 <img src="/image/icons/date.svg" alt="date">
                 <div class="curren-date">
