--- a/views/newPost.ejs
+++ b/views/newPost.ejs
@@ -11,7 +11,7 @@
                 </h1>
                 <form 
                     class="new-post-form" 
-                    action="/api/new"
+                    action="/api/post/new"
                     method="POST"
                     enctype="multipart/form-data"
                 >
