--- a/views/postPage.ejs
+++ b/views/postPage.ejs
@@ -7,7 +7,10 @@
         <div class="main-container">
             <div class="content">
                 <div class="post-container">
-                    <div class="posts-list">                     
+                    <div class="posts-list">      
+                        <div class="profile-pge-header sections-header">
+                            <h1 class="">Блог: <%= post.postTitle %></h1>
+                        </div>               
                         <div class="post-item">
                             <div class="post-img">
                                 <img src="<%= post.image %>" alt="post img">
