--- a/views/partials/categories.ejs
+++ b/views/partials/categories.ejs
@@ -1,5 +1,5 @@
 <li>
-    <a href="/<%= category.key %>">
+    <a href="?postCategory=<%= category.key %>">
         <%= category.name %>
     </a>
 </li>
