--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     </a>
     <div class="haeder-search">
         <form action="">
-            <input type="text" placeholder="Blog search">
+            <input type="text" name="search" placeholder="Blog search">
             <%- include('./button', {icon: '/image/icons/haeder-saerch-icon.png', title: 'Search', likn: ''}) %>
         </form>
     </div>
