--- a/views/postPage.ejs
+++ b/views/postPage.ejs
@@ -63,6 +63,19 @@
                                     </div>
                                 </div>
                             </div>
+                        
+                        </div>
+                        <div class="post-commets">
+                            <h2>Кометарй</h2>
+                            <form class="commets-form" action="">
+                                <textarea class="add-commet" name="text" id="">
+
+                                </textarea>
+                                <button class="add-commet-btn">Сохранить</button>
+                            </form>
+                            <div class="all-comments">
+                                <p>Пока нет комментариев</p>
+                            </div>
                         </div>
                     </div>
                 </div>
